FIX #556 refactor word-wrap
word-wrap is now overflow-wrap fallback and word-break gets reset
accordingly depending on $wrap

--- a/app/assets/stylesheets/addons/_word-wrap.scss
+++ b/app/assets/stylesheets/addons/_word-wrap.scss
@@ -1,8 +1,10 @@
 @mixin word-wrap($wrap: break-word) {
   word-wrap: $wrap;
+  overflow-wrap: $wrap;
 
-  @if $wrap == break-word {
-    overflow-wrap: break-word;
+  @if $wrap == break-word {    
     word-break: break-all;
+  } @else {
+    word-break: $wrap;
   }
 }
